# code-review

./: pyproject.toml  secure_coder_deepseek_full.yml
data/processed/: asvs.alpaca.jsonl  asvs.enriched.jsonl  semgrep_security.jsonl  semgrep_synthetic.jsonl
scripts/: build_semgrep_dataset.py  convert_asvs_enriched_to_alpaca.py  enrich_asvs_csv.py  generate_synthetic_from_patterns.py  install_non_hf_datasets.py
